tests/errors/unknown_ctor_pattern.err
Type Error: Unknown constructor `Bar` on pattern match
On file `tests/errors/unknown_ctor_pattern.vrv` at 2:3
2:   Bar() => {}
     ^
